--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: rgb(239, 239, 239);
+}
+
 nav {
     background-color: rgb(210, 96, 96);
     display: flex;
@@ -39,11 +43,12 @@ nav ul li a {
 
 .count {
     background-color: rgb(210, 96, 96);
-    max-width: 10%;
+    max-width: 40%;
     padding: 8px;
     display: flex;
     flex-direction: column;
     border-radius: 5px;
+    margin-top: 20px;
 }
 
 .buttons {
@@ -76,4 +81,91 @@ nav ul li a {
     background-color: white;
     padding: 10px 0px;
     cursor: pointer;
+}
+
+.ilc {
+    min-height: 60vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.itemList {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+}
+
+.item {
+    margin: 30px 20px;
+    width: 20%;
+    box-shadow: 5px 5px 10px 1px rgba(237, 151, 151, 0.438);
+
+    background-color: white;
+    transition: all 0.3s ease-in-out;
+}
+
+.item:hover {
+    box-shadow: 5px 5px 1px 1px rgba(237, 151, 151, 0.438);
+}
+
+.item img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-bottom: 6px solid rgba(243, 128, 128, 0.51);
+}
+
+.item .info {
+    padding: 10px;
+    margin: 10px 0px;
+}
+
+.item .info h2 {
+    margin-bottom: 10px;
+}
+
+.item .info h3 {
+    margin-bottom: 15px;
+}
+
+.item .info a {
+    background-color: rgb(243, 128, 128);
+    border: none;
+    padding: 8px 6px;
+    margin: 10px 0px;
+    text-decoration: none;
+    color: white;
+    cursor: pointer;
+}
+
+.idc {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+}
+
+.detail {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.detail img {
+    width: 400px;
+}
+
+.detail .infoDetail {
+    width: 40%;
+}
+
+.detail .infoDetail h2 {
+    margin-bottom: 10px;
+}
+
+.detail .infoDetail h4 {
+    margin-bottom: 10px;
 }
